--- a/shuijiao.html
+++ b/shuijiao.html
@@ -9,11 +9,11 @@
     <div class="title">
         <h2>睡觉觉</h2>
     </div>
-    <div class="intro"><p>哼唧唧，坏坏要乖乖睡觉觉哦！！！</p></div>
-    <div class="criteria"><p>标准：<br>正常睡觉时间：0：00以前<br>熬小夜：1：30以前<br>熬大夜：不超过4：00</p></div>
+    <div class="intro"><p>哼唧唧，坏坏要乖乖睡觉觉哦！！！<br>基于现在的情况，略作调整</p></div>
+    <div class="criteria"><p>标准：<br>正常睡觉时间：1：00以前<br>熬小夜：2：00以前<br>熬大夜：不超过5：00</p></div>
     <div class="infor2">
-    <div class="normal">平时<br>无特殊情况，正常睡觉时间<br>特殊情况最多最多熬小夜</div>
-    <div class="special">考试月<br>理论上只熬小夜<br>最多连续两天熬大夜，如果困了必须睡觉</div>
+    <div class="normal">平时<br>无特殊情况，正常睡觉时间<br>特殊情况熬小夜，极特殊熬大夜</div>
+    <div class="special">考试月<br>可以熬大夜<br>如果困了必须睡觉</div>
     </div>
 </body>
 </html>
