--- a/weijinci.html
+++ b/weijinci.html
@@ -8,8 +8,8 @@
 <body>
     <div class="title">
         <h2>违禁词</h2></div>
-    <div class="intro"><p>目前乖乖欠坏坏12次！！！<br>乖乖留言：早晚会还回来的（扭头）哼唧唧</p></div>
-    <div class="intro"><p>违禁词存在的意义，在于不要让这两只狗狗胡思乱想，也不要胡思乱想哦！</p></div>
-    <div class="intro">谢谢       对不起       耽误       打扰</div>
+    <div class="intro"><p>目前乖乖欠坏坏100次（居然这么多吗）<br>乖乖留言：早晚会还回来的……吧（坚定）</p></div>
+    <div class="intro"><p>违禁词存在的意义，在于不要让这两只狗狗胡思乱想哦！</p></div>
+    <div class="intro">违禁词列表：谢谢、对不起、耽误、打扰、啊这、哦、哦哦、笑死</div>
 </body>
 </html>
